add oringa school and hello world links

--- a/my-webpage.html
+++ b/my-webpage.html
@@ -15,6 +15,9 @@
         <li>CSS</li>
         <li>Javascript</li>
         <li>And a lot more!</li>
+
+    <p><a href="http://moringaschool.com">Moringa School</a>.Its a great place to learn software development</p>
+    <p>Here is a link to my <a href="hello-world.html">hello world</a>.</p>
     </ol>
   </body>
   </html>
